Wed Jul  6 08:25:25 2005  Chad Elliott  <elliott_c@ociweb.com>

        * README:

          Corrected some minor documentation mistakes.

        * modules/ProjectCreator.pm:

          Added support for automatic grouping of generated files based on
          the group name of the custom input file.

        * templates/bmake.mpd:

          Added Codeguard support.

Tue Jul  5 10:25:18 2005  Chad Elliott  <elliott_c@ociweb.com>

        * templates/automake.mpd:

          Added macros and compile_flags to outter if check to allow these
          to be part of the CPPFLAGS (if none of the other variables in the
          if are not defined).

Tue Jul  5 07:23:07 2005  Chad Elliott  <elliott_c@ociweb.com>

        * templates/vc7.mpd:
        * templates/vc8.mpd:

          Correctly support the 'custom_only' keyword by utilizing the
          "Utility" project type.  This project type does not perform
          anything but custom build rules which is exactly what we needed.

Sat Jul  2 10:57:13 2005  Chad Elliott  <elliott_c@ociweb.com>

        * modules/GHSProjectCreator.pm:

          Corrected a problem with determining the reltop value.

        * modules/ProjectCreator.pm:

          Fixed specific and conditional where multiple negated project types
          are used.  It would only look at the first type and decide that
          the current project type wasn't negated.

          When '!' was combined with a wildcard, MPC wasn't adding the files
          that didn't match if the user had specified at least one file (in
          addition to the negated wildcard).

        * templates/bmake.mpd:
        * templates/make.mpd:

          Moved the local marker to a location after the all target.

        * templates/ghs.mpd:

          Fixed custom build support.

        * templates/nmake.mpd:

          Correctly support the use of dllout.

Fri Jul  1 10:03:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * templates/bmake.mpd: