@@ -1,3 +1,11 @@
+Wed Jul  6 10:33:21 2005  Chad Elliott  <elliott_c@ociweb.com>
+
+        * modules/ProjectCreator.pm:
+
+          Corrected negated wildcard matching where the pattern contained a
+          directory name.  The negated wildcard was always being applied to
+          the files in the current directory.
+
 Wed Jul  6 08:25:25 2005  Chad Elliott  <elliott_c@ociweb.com>
 
         * README:
